Interface Channel Created

--- a/RssFeedReader/RssFeedReader.csproj
+++ b/RssFeedReader/RssFeedReader.csproj
@@ -43,16 +43,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Channel\OnlineKhabar.cs" />
+    <Compile Include="Extension\DateTimeExt.cs" />
+    <Compile Include="Interface\IChannel.cs" />
+    <Compile Include="Model\Channel.cs" />
+    <Compile Include="Model\FeedItem.cs" />
+    <Compile Include="Model\FeedReader.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Channel\" />
-    <Folder Include="Interface\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
